# fxp

./: .editorconfig  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish.yml  tests.yml
docs/: api.md  requirements.txt
fxp/: __init__.py
tests/: conftest.py  test_fxp.py
tests/assets/: serum_init.fxp
