[metadata]
name = fxp
version = file: VERSION
description = VST2.x plugin FXP preset parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/demberto/fxp
author = demberto
author_email = demberto@protonmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/demberto/fxp
    Changelog = https://github.com/demberto/fxp/blob/master/CHANGELOG.md
    Documentation = https://fxp.rtfd.io
    Bug Tracker = https://github.com/demberto/fxp/issues

[options]
packages = fxp
python_requires = >=3.6
